# ytx-caption-downloader

./: MANIFEST.in  README.md  ausum.py  pyproject.toml  transcript-summary.md  ytx.py
docs/plans/: 2026-02-15-parakeet-transcription.md
