[project]
name = "ausum"
version = "1.0.0"
description = "YouTube audio transcription with Parakeet + Claude summarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roy Natian"}
]

[project.scripts]
ausum = "ausum:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
