[project]
name = "ausum"
version = "1.1.4"
description = "YouTube audio transcription with Parakeet + Claude summarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roy Natian"}
]

[project.scripts]
ausum = "ausum:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ausum"]
include-package-data = true
